--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -15,6 +15,12 @@ body
 	background-color: $bg-color
 	font-weight: normal
 
+	&.modal-open
+		overflow: hidden
+
 .main
 	max-width: 1360px
 	width: 90vw
+
+a, button
+	+baseTransition()
